--- a/src/input.css
+++ b/src/input.css
@@ -28,3 +28,16 @@ body{
 #dark-toggle:checked + label div.toggle-circle {
     @apply translate-x-3;
 }
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+.animate-float {
+  animation: float 4s ease-in-out infinite;
+}
+
